--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,13 +17,15 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: "3.8"
-    - name: Install package
+    - name: Update pip
       run: |
         python -m pip install --upgrade pip
+    - name: Install package
+      run: |
         pip install -e .
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Install dependencies
       run: |
+        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
         pip install pytest
     - name: Test with pytest
       run: |
