--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,6 +17,7 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: "3.8"
+        cache: 'pip' # cache for faster build
     - name: Update pip
       run: |
         python -m pip install --upgrade pip
