--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -10,12 +10,12 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
-  # # build
-  #   - name: Set up Python 3.8
-  #     uses: actions/setup-python@v3
-  #     with:
-  #       python-version: "3.8"
-  #       cache: 'pip' # cache for faster build
+  # build
+    - name: Set up Python 3.8
+      uses: actions/setup-python@v3
+      with:
+        python-version: "3.8"
+        cache: 'pip' # cache for faster build
   #   - name: Update pip
   #     run: |
   #       python -m pip install --upgrade pip
@@ -38,6 +38,7 @@ jobs:
     -name: Create file
       run: |
         touch cvxpy/benchmarks/benchmark_report.md
+
   # commit:
     - name: Commit files
       run: |
