--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -16,15 +16,15 @@ jobs:
       with:
         python-version: "3.8"
         cache: 'pip' # cache for faster build
-  #   - name: Update pip
-  #     run: |
-  #       python -m pip install --upgrade pip
-  #   - name: Install package
-  #     run: |
-  #       pip install -e .
-  #   - name: Install dependencies
-  #     run: |
-  #       if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+    - name: Update pip
+      run: |
+        python -m pip install --upgrade pip
+    - name: Install package
+      run: |
+        pip install -e .
+    - name: Install dependencies
+      run: |
+        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
   # # benchmark:
   #   - name: Install benchmark package
