--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,29 +10,29 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
-  # # build
-  #   - name: Set up Python 3.8
-  #     uses: actions/setup-python@v3
-  #     with:
-  #       python-version: "3.8"
-  #       cache: 'pip' # cache for faster build
-  #   - name: Update pip
-  #     run: |
-  #       python -m pip install --upgrade pip
-  #   - name: Install package
-  #     run: |
-  #       pip install -e .
-  #   - name: Install dependencies
-  #     run: |
-  #       if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+  # build
+    - name: Set up Python 3.8
+      uses: actions/setup-python@v3
+      with:
+        python-version: "3.8"
+        cache: 'pip' # cache for faster build
+    - name: Update pip
+      run: |
+        python -m pip install --upgrade pip
+    - name: Install package
+      run: |
+        pip install -e .
+    - name: Install dependencies
+      run: |
+        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
-  # # benchmark:
-  #   - name: Install benchmark package
-  #     run: |
-  #       pip install -r requirements_benchmark.txt
-  #   - name: Benchmark test
-  #     run: |
-  #       python cvxpy/benchmarks/run_benchmarks.py
+  # benchmark:
+    - name: Install benchmark package
+      run: |
+        pip install -r requirements_benchmark.txt
+    - name: Benchmark test
+      run: |
+        python cvxpy/benchmarks/run_benchmarks.py
 
   # dummy create file
     -name: Create file
