--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,65 +1,53 @@
-name: free-build
+name: benchmark
 
 on:
   pull_request:
     branches: [ master ]
 
 jobs:
-  build:
+  benchmark:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
+
+  # # build
     - name: Set up Python 3.8
       uses: actions/setup-python@v3
       with:
         python-version: "3.8"
         cache: 'pip' # cache for faster build
-    - name: Update pip
-      run: |
-        python -m pip install --upgrade pip
-    - name: Install package
-      run: |
-        pip install -e .
-    - name: Install dependencies
-      run: |
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+  #   - name: Update pip
+  #     run: |
+  #       python -m pip install --upgrade pip
+  #   - name: Install package
+  #     run: |
+  #       pip install -e .
+  #   - name: Install dependencies
+  #     run: |
+  #       if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
-  # test:
-  #   needs: build
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #   - uses: actions/checkout@v3
-    - name: Install test package
-      run: |
-        pip install pytest
-    - name: Test with pytest
-      run: |
-        pytest
+  # # benchmark:
+  #   - name: Install benchmark package
+  #     run: |
+  #       pip install -r requirements_benchmark.txt
+  #   - name: Benchmark test
+  #     run: |
+  #       python cvxpy/benchmarks/run_benchmarks.py
 
-  # benchmark:
-  #   needs: build
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #   - uses: actions/checkout@v3
-    - name: Install benchmark package
+  # dummy create file
+    -name: Create file
       run: |
-        pip install -r requirements_benchmark.txt
-    - name: Benchmark test
-      run: |
-        python cvxpy/benchmarks/run_benchmarks.py
+        touch cvxpy/benchmarks/benchmark_report.md
 
   # commit:
-  #   needs: benchmark
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #   - uses: actions/checkout@v3
-    - name: Commit files # transfer the new html files back into the repository
+    - name: Commit files
       run: |
         git config --local user.name "benchmarkjob"
         git add -f cvxpy/benchmarks/benchmark_report.md
         git commit -m "Updating benchmark result"
-    - name: Push changes # push the output folder to your repo
-      uses: ad-m/github-push-action@master
+    - name: Push changes 
+      uses: ad-m/github-push-action@v0.6.0
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
-        force: true
+        repository: git@github.com:${{ github.actor }}/cvxpy
+        branch: ${{ github.head_ref }}
