--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,44 +14,27 @@ jobs:
       with:
         python-version: "3.8"
         cache: 'pip' # cache for faster build
-    # - name: Update pip
-    #   run: |
-    #     python -m pip install --upgrade pip
-    # - name: Install package
-    #   run: |
-    #     pip install -e .
-    # - name: Install dependencies
-    #   run: |
-    #     if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-
-  # test:
-  #   needs: build
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #   - uses: actions/checkout@v3
-    # - name: Install test package
-    #   run: |
-    #     pip install pytest
-    # - name: Test with pytest
-    #   run: |
-    #     pytest
-
-  # benchmark:
-  #   needs: build
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #   - uses: actions/checkout@v3
-    # - name: Install benchmark package
-    #   run: |
-    #     pip install -r requirements_benchmark.txt
-    # - name: Benchmark test
-    #   run: |
-    #     python cvxpy/benchmarks/run_benchmarks.py
-
-  # dummy create file
-    - name: Create file
+    - name: Update pip
       run: |
-        touch cvxpy/benchmarks/benchmark_report.md
+        python -m pip install --upgrade pip
+    - name: Install package
+      run: |
+        pip install -e .
+    - name: Install dependencies
+      run: |
+        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+
+    - name: Install benchmark package
+      run: |
+        pip install -r requirements_benchmark.txt
+    - name: Benchmark test
+      run: |
+        python cvxpy/benchmarks/run_benchmarks.py
+
+  # # dummy create file
+  #   - name: Create file
+  #     run: |
+  #       touch cvxpy/benchmarks/benchmark_report.md
 
   # commit:
   #   needs: benchmark
