--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,27 +9,27 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
-    - name: Set up Python 3.8
-      uses: actions/setup-python@v3
-      with:
-        python-version: "3.8"
-        cache: 'pip' # cache for faster build
-    - name: Update pip
-      run: |
-        python -m pip install --upgrade pip
-    - name: Install package
-      run: |
-        pip install -e .
-    - name: Install dependencies
-      run: |
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+    # - name: Set up Python 3.8
+    #   uses: actions/setup-python@v3
+    #   with:
+    #     python-version: "3.8"
+    #     cache: 'pip' # cache for faster build
+    # - name: Update pip
+    #   run: |
+    #     python -m pip install --upgrade pip
+    # - name: Install package
+    #   run: |
+    #     pip install -e .
+    # - name: Install dependencies
+    #   run: |
+    #     if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
-    - name: Install benchmark package
-      run: |
-        pip install -r requirements_benchmark.txt
-    - name: Benchmark test
-      run: |
-        python cvxpy/benchmarks/run_benchmarks.py
+    # - name: Install benchmark package
+    #   run: |
+    #     pip install -r requirements_benchmark.txt
+    # - name: Benchmark test
+    #   run: |
+    #     python cvxpy/benchmarks/run_benchmarks.py
 
     - name: commit
       run: |
