--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,7 +38,8 @@ jobs:
         git config user.email github-actions@github.com
         git add .
         git commit -m "generated"
-        git push origin HEAD:${{ github.head_ref }}
+        git remote add dev git@github.com:${{ github.actor }}/cvxpy.git
+        git push remote/${{ github.head_ref }}
 
   # # dummy create file
   #   - name: Create file
